# Tradeflow

./: .env.example  .gitignore  Dockerfile  MILESTONE1_COMPLETION_REPORT.md  PHASE0_COMPLETION_REPORT.md  PHASE0_VERIFICATION.md  README.md  docker-compose.yml  manage.py  pyproject.toml
apps/: __init__.py
apps/audit/: apps.py
apps/audit/api/: urls.py
apps/audit/application/: services.py
apps/audit/domain/: entities.py
apps/audit/infrastructure/: models.py
apps/iam/: __init__.py  apps.py
apps/iam/api/: urls.py  views.py
apps/iam/application/: services.py
apps/iam/domain/: entities.py
apps/iam/infrastructure/: models.py  redis_repositories.py  repositories.py
apps/iam/tests/: test_authentication_service.py
apps/platform/: __init__.py  apps.py
apps/platform/api/: serializers.py  urls.py  views.py
apps/platform/application/: __init__.py  business_preferences_service.py  currency_service.py  number_sequence_service.py  services.py  stored_file_service.py  tax_configuration_service.py
apps/rbac/: apps.py
apps/retail/: __init__.py  apps.py
backend/: .dockerignore  docker-compose.yml
backend/config/: api_urls.py  urls.py
backend/docs/: AI_CONTEXT.md  INVENTORY_ARCHITECTURE_VALIDATION.md  INVENTORY_HARDENING_REPORT.md  MILESTONE5_STEP1_MODEL_VALIDATION.md  MILESTONE5_STEP1_VALIDATION.md  MILESTONE5_STEP2_SERVICE_VALIDATION.md  MILESTONE5_STEP3_API_VALIDATION.md  MILESTONE6_STEP1_MODEL_VALIDATION.md  MILESTONE6_STEP2_SERVICE_VALIDATION.md  MILESTONE6_STEP3_API_VALIDATION.md  MILESTONE7_STEP1_MODEL_VALIDATION.md  MILESTONE7_STEP2_SERVICE_VALIDATION.md  MILESTONE7_STEP3_API_VALIDATION.md  PLATFORM_ARCHITECTURE_VALIDATION.md  PROJECT_STATUS.md  PURCHASING_ARCHITECTURE_VALIDATION.md  PURCHASING_HARDENING_REPORT.md  RETAIL_ARCHITECTURE_VALIDATION.md  RETAIL_HARDENING_REPORT.md  RETAIL_REFACTOR_VALIDATION.md  STEP1_MODEL_VALIDATION.md
backend/infrastructure/: __init__.py
backend/shared/: __init__.py
config/: api_urls.py  asgi.py  wsgi.py
config/settings/: __init__.py  base.py  production.py  staging.py
core/: __init__.py  pagination.py
core/auth/: __init__.py  jwt.py
core/context/: actor.py
core/errors/: __init__.py  envelope.py
core/health/: views.py
core/logging/: config.py
core/middleware/: request_id.py  tenant.py
core/permissions/: __init__.py  base.py
docs/: DEVELOPER_GUIDE.md  FRONTEND_ARCHITECTURE.md  FRONTEND_BACKEND_INTEGRATION.md  FRONTEND_FOLDER_STRUCTURE.md  FRONTEND_TECH_STACK.md  MILESTONE5_IMPLEMENTATION_PLAN.md  MONOREPO_RESTRUCTURE_REPORT.md  PLATFORM_HARDENING_REPORT.md  PROJECT_STATUS.md  REFACTOR_VALIDATION.md  STEP2_SERVICE_VALIDATION.md  STEP3_API_VALIDATION.md
frontend/: README.md
infrastructure/cache/: redis.py
shared/events/: __init__.py  base.py  branch_events.py  company_events.py  fiscal_year_events.py  number_sequence_events.py  platform_events.py  warehouse_events.py
shared/outbox/: models.py
shared/storage/: base.py
shared/types/: enums.py
(+96 files in other folders)
