[project]
name = "tradeflow-backend"
version = "0.1.0"
description = "TradeFlow Backend — Multi-Tenant SaaS ERP for African SMEs"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "TradeFlow", email = "dev@tradeflow.co.za" },
]

dependencies = [
    # Core Framework
    "django>=5.1,<5.2",
    "djangorestframework>=3.15,<3.16",
    "djangorestframework-simplejwt>=5.4,<5.5",
    "drf-spectacular>=0.28,<0.29",

    # Database
    "psycopg[binary]>=3.2,<3.3",

    # Cache & Queues
    "redis>=5.2,<5.3",
    "celery>=5.4,<5.5",

    # Security
    "bcrypt>=4.2,<4.3",
    "cryptography>=44.0,<45.0",

    # Utilities
    "python-dotenv>=1.1,<1.2",
    "python-dateutil>=2.9,<2.10",
    "pytz>=2024.2",

    # Production
    "gunicorn>=23.0,<23.1",
    "django-cors-headers>=4.6,<4.7",
    "django-filter>=25.1,<25.2",
    "python-json-logger>=3.2,<3.3",
    "sentry-sdk>=2.20,<2.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<8.4",
    "pytest-django>=4.9,<4.10",
    "pytest-cov>=6.0,<6.1",
    "ruff>=0.9,<0.10",
    "black>=24.10,<24.11",
    "isort>=5.13,<5.14",
    "pre-commit>=4.1,<4.2",
    "model_bakery>=1.19,<1.20",
]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "FA",  # flake8-future-annotations
]
ignore = [
    "E501",  # line too long (handled by black)
    "N818",  # exception name suffix
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest]
ini_options = """
[pytest]
DJANGO_SETTINGS_MODULE = config.settings.test
python_files = tests.py test_*.py *_tests.py
testpaths = tests
addopts = --reuse-db --create-db -v
"""

[tool.coverage.run]
source = ["config", "core", "shared", "infrastructure", "apps"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/test_*.py",
    "*_tests.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bMeta\\b",
]

[build-system]
requires = ["setuptools>=75.0,<76.0"]
build-backend = "setuptools.backends._legacy:_Backend"